# learn_htmx

./: Cargo.toml  README.md
src/: lib.rs  main.rs
static/: index.html
