[package]
name = "learn_htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
libsql-client = { version = "0.31.11", features = ["reqwest_backend"] }
tokio = { version = "1.30.0", features = ["full"] }
anyhow = "1.0.72"
dotenv = "0.15.0"
actix-files = "0.6.2"
